--- a/public/staging-login.html
+++ b/public/staging-login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Login | LearnToBot</title>
     <link rel="stylesheet" href="kids-theme.css">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         body {
             background-color: #111827;
@@ -308,6 +309,7 @@
         // Run
         init();
     </script>
+    <script src="mobile-nav.js"></script>
 </body>
 
 </html>
