--- a/public/connections.html
+++ b/public/connections.html
@@ -12,6 +12,10 @@
             box-sizing: border-box;
         }
 
+        /* Mobile Styles */
+        @import url('mobile.css');
+
+
         body {
             font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: #111827;
@@ -421,6 +425,7 @@
                 <li><a href="/student-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
                 <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
+                <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
                 <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
@@ -612,6 +617,7 @@
         });
     </script>
     <script src="mode-indicator.js"></script>
+    <script src="mobile-nav.js"></script>
 </body>
 
 </html>
