--- a/public/index_backup.html
+++ b/public/index_backup.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LearnToBot Class - Projects</title>
     <link rel="stylesheet" href="kids-theme.css">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         * {
             margin: 0;
