--- a/public/ratings.html
+++ b/public/ratings.html
@@ -12,6 +12,10 @@
             box-sizing: border-box;
         }
 
+        /* Mobile Styles */
+        @import url('mobile.css');
+
+
         body {
             font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: #111827;
@@ -334,6 +338,7 @@
                 <li><a href="/" class="navbar-link">Projects</a></li>
                 <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
                 <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
+                <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
                 <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
                 <li><a href="/ratings.html" class="navbar-link active">Ratings</a></li>
             </ul>
@@ -494,6 +499,7 @@
         }
     </script>
     <script src="mode-indicator.js"></script>
+    <script src="mobile-nav.js"></script>
 </body>
 
 </html>
