--- a/public/staging.html
+++ b/public/staging.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LearnToBot Class - Projects</title>
     <link rel="stylesheet" href="kids-theme.css">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         * {
             margin: 0;
@@ -1177,6 +1178,7 @@
                 <li><a href="/prizes.html" class="navbar-link">Prizes</a></li>
                 <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
                 <li><a href="/student-files.html" class="navbar-link">Student Files</a></li>
+                <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
                 <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
@@ -2320,6 +2322,7 @@
         });
     </script>
     <script src="mode-indicator.js"></script>
+    <script src="mobile-nav.js"></script>
 </body>
 
 </html>
