--- a/public/student-files.html
+++ b/public/student-files.html
@@ -12,6 +12,10 @@
             box-sizing: border-box;
         }
 
+        /* Mobile Styles */
+        @import url('mobile.css');
+
+
         body {
             font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: #111827;
@@ -429,7 +433,8 @@
                 <li><a href="/" class="navbar-link">Projects</a></li>
                 <li><a href="/student-progress.html" class="navbar-link">Student Progress</a></li>
                 <li><a href="/teacher.html" class="navbar-link">Teacher Panel</a></li>
-                <li><a href="/student-files.html" class="navbar-link active">Student Files</a></li>
+                <li><a href="/student-files.html" class="navbar-link active">My Files</a></li>
+                <li><a href="/all-kids.html" class="navbar-link">All Kids</a></li>
                 <li><a href="/test-page.html" class="navbar-link">Test Page</a></li>
             </ul>
 
