--- a/public/test-page.html
+++ b/public/test-page.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Page - LearnToBot Class</title>
     <link rel="stylesheet" href="kids-theme.css">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         * {
             margin: 0;
@@ -161,6 +162,7 @@
         <h1>This page is working</h1>
     </div>
     <script src="mode-indicator.js"></script>
+    <script src="mobile-nav.js"></script>
 </body>
 
 </html>
