--- a/public/instructor-dashboard.html
+++ b/public/instructor-dashboard.html
@@ -892,36 +892,247 @@
                 <div style="padding-bottom: 80px;">
                     <!-- Header Profile -->
                     <div style="background: white; padding: 20px; text-align: center; border-bottom: 1px solid #eee;">
+                        <!-- Back Button internal -->
+                        <div onclick="switchTab('today')" style="position: absolute; left: 20px; top: 80px; font-size: 24px; cursor: pointer;">←</div>
+
                         <img src="${headshotUrl || ''}" onerror="this.src='https://via.placeholder.com/100?text=?'" 
                              style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; border: 3px solid #db3236; margin-bottom: 10px;">
                         <h2 style="margin: 0; color: #333;">${studentData.studentName}</h2>
                         <div style="display: flex; justify-content: center; gap: 20px; margin-top: 15px;">
                             <div style="text-align: center;">
                                 <div style="font-weight: bold; font-size: 18px; color: #db3236;">${studentData.totalPoints || 0}</div>
-                                <div style="font-size: 11px; color: #888; text-transform: uppercase;">Points</div>
+                                <div style="font-size: 11px; color: #666; text-transform: uppercase;">Points</div>
                             </div>
                             <div style="text-align: center;">
                                 <div style="font-weight: bold; font-size: 18px; color: #333;">${studentData.totalCompleted || 0}</div>
-                                <div style="font-size: 11px; color: #888; text-transform: uppercase;">Completed</div>
+                                <div style="font-size: 11px; color: #666; text-transform: uppercase;">Completed</div>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Sections -->
-                    ${renderSection('Assigned Projects', projects.assignedProjects, '📌', '#EF4444')}
-                    ${renderSection('Working On', projects.inProgressProjects, '🚧', '#3B82F6')}
-                    ${renderSection('Completed', projects.completedProjects, '✅', '#10B981')}
+                    ${renderSectionWithAction('Assigned Projects', projects.assignedProjects, '📌', '#db3236', studentData.studentId)}
+                    ${renderSectionWithAction('Working On', projects.inProgressProjects, '🚧', '#3182ce', studentData.studentId)}
+                    ${renderSection('Completed', projects.completedProjects, '✅', '#38a169')}
+                </div>
+            `;
+            container.innerHTML = html;
+        }
 
-                    <!-- Back Button -->
-                    <div style="padding: 20px; text-align: center;">
-                        <button onclick="switchTab('today')" style="background: #edf2f7; color: #4a5568; padding: 12px 30px; border: none; border-radius: 30px; font-weight: 600;">
-                            ← Back to Dashboard
-                        </button>
+        function renderSectionWithAction(title, items, icon, colorClass, studentId) {
+            if (!items || items.length === 0) return '';
+
+            const getIcon = (type) => {
+                const lower = (type || '').toLowerCase();
+                if (lower.includes('scratch')) return '🐱';
+                if (lower.includes('python')) return '🐍';
+                if (lower.includes('web')) return '🌐';
+                return '📄';
+            };
+
+            let listHtml = items.map(p => `
+                <div style="background: white; padding: 12px; border-bottom: 1px solid #eee; display: flex; align-items: center; position: relative;">
+                    <div style="font-size: 24px; margin-right: 15px;">${getIcon(p.type)}</div>
+                    <div style="flex-grow: 1; padding-right: 40px;">
+                        <div style="font-weight: 600; color: #333; font-size: 15px;">${p.name}</div>
+                        <div style="font-size: 12px; color: #777; margin-top: 2px;">
+                            ${p.type || 'Project'} • ${p.date || 'Assigned'}
+                        </div>
                     </div>
+                    <div onclick="openCompletionModal('${studentId}', '${p.originalCode.replace(/'/g, "\\'")}', '${p.name.replace(/'/g, "\\'")}', '${(document.querySelector('img[src*=\"headshot\"]') || {}).src || ''}', '${document.querySelector('h2').innerText.replace(/'/g, "\\'")}')" 
+                         style="position: absolute; right: 10px; bottom: 10px; background: #ECFDF5; color: #047857; width: 32px; height: 32px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 0 1px 2px rgba(0,0,0,0.1); cursor: pointer; border: 1px solid #6EE7B7;">
+                        <span style="font-size: 16px;">✓</span>
+                    </div>
+                </div>
+            `).join('');
+
+            return `
+                <div style="margin-top: 20px; background: white; border-top: 4px solid ${colorClass}; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+                    <div style="padding: 10px 15px; background: #f8f9fa; border-bottom: 1px solid #eee; display: flex; align-items: center; font-weight: bold; color: #444;">
+                        <span style="margin-right: 10px;">${icon}</span> ${title} (${items.length})
+                    </div>
+                    <div>${listHtml}</div>
+                </div>
+            `;
+        }
+
+        function openCompletionModal(studentId, projectCode, projectName, headshotUrl, studentName) {
+            const modalId = 'completionModal';
+            const existing = document.getElementById(modalId);
+            if (existing) existing.remove();
+
+            const modal = document.createElement('div');
+            modal.id = modalId;
+            modal.style.cssText = 'position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 1000; overflow-y: auto; padding-bottom: 50px;';
+
+            modal.innerHTML = `
+                <div style="max-width: 600px; margin: 0 auto; padding: 20px;">
+                    <div style="display: flex; align-items: center; margin-bottom: 30px;">
+                        <button onclick="document.getElementById('${modalId}').remove()" style="background: none; border: none; font-size: 24px; padding: 0; margin-right: 15px;">✕</button>
+                        <h2 style="margin: 0; font-size: 18px;">Complete Project</h2>
+                    </div>
+                    <div style="text-align: center; margin-bottom: 30px;">
+                         <img src="${headshotUrl}" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 2px solid #ddd; margin-bottom: 10px;">
+                         <h3 style="margin: 0; color: #333;">${studentName}</h3>
+                         <div style="color: #666; margin-top: 5px; font-weight: 500;">${projectName}</div>
+                    </div>
+                    <div style="margin-bottom: 40px; text-align: center;">
+                        <div style="margin-bottom: 10px; font-weight: 600; color: #444;">Ask the kid how they would rate this project?</div>
+                        <div class="star-rating" style="font-size: 40px; color: #ddd; cursor: pointer;">
+                            <span onclick="setRating(1)" data-val="1">★</span>
+                            <span onclick="setRating(2)" data-val="2">★</span>
+                            <span onclick="setRating(3)" data-val="3">★</span>
+                            <span onclick="setRating(4)" data-val="4">★</span>
+                            <span onclick="setRating(5)" data-val="5">★</span>
+                        </div>
+                        <input type="hidden" id="selectedRating" value="0">
+                    </div>
+                    <div style="border: 2px dashed #CBD5E0; border-radius: 12px; padding: 30px; text-align: center; margin-bottom: 20px; background: #F7FAFC;">
+                        <input type="file" id="modalVideoInput" accept="video/*" style="display: none;" onchange="handleModalFileSelect(this)">
+                        <label for="modalVideoInput" style="cursor: pointer; display: block;">
+                            <div style="font-size: 40px; margin-bottom: 10px;">📹</div>
+                            <span style="color: #4A5568; font-weight: 500;">Upload Video Evidence</span>
+                            <div id="modalFileName" style="margin-top: 10px; color: #3182CE; font-size: 0.9em; font-weight: bold; overflow-wrap: break-word;"></div>
+                        </label>
+                    </div>
+                    <div id="modalProgressContainer" style="display: none; margin-bottom: 20px;">
+                        <div style="display: flex; justify-content: space-between; margin-bottom: 5px; color: #4A5568; font-size: 0.9em;">
+                            <span id="modalUploadStatus">Uploading...</span>
+                            <span id="modalUploadPercent">0%</span>
+                        </div>
+                        <div style="width: 100%; height: 10px; background: #EDF2F7; border-radius: 5px; overflow: hidden;">
+                            <div id="modalProgressBar" style="width: 0%; height: 100%; background: #48BB78; transition: width 0.3s ease;"></div>
+                        </div>
+                    </div>
+                    <button id="completeBtn" onclick="submitCompletion('${studentId}', '${projectCode}')" 
+                        style="width: 100%; background: #db3236; color: white; border: none; padding: 15px; border-radius: 8px; font-size: 16px; font-weight: bold; opacity: 0.5; cursor: not-allowed;" disabled>
+                        Mark as Complete
+                    </button>
+                    <div id="completionResult" style="text-align: center; margin-top: 15px; display: none;"></div>
                 </div>
             `;
 
-            container.innerHTML = html;
+            document.body.appendChild(modal);
+
+            window.setRating = (val) => {
+                document.getElementById('selectedRating').value = val;
+                const stars = document.querySelectorAll('.star-rating span');
+                stars.forEach((s, idx) => {
+                    s.style.color = (idx < val) ? '#F59E0B' : '#ddd';
+                });
+                checkSubmitReady();
+            };
+
+            window.handleModalFileSelect = (input) => {
+                if (input.files && input.files[0]) {
+                    document.getElementById('modalFileName').innerText = input.files[0].name;
+                    checkSubmitReady();
+                }
+            };
+
+            window.checkSubmitReady = () => {
+                const rating = document.getElementById('selectedRating').value;
+                const file = document.getElementById('modalVideoInput').files[0];
+                const btn = document.getElementById('completeBtn');
+
+                if (rating > 0 && file) {
+                    btn.disabled = false;
+                    btn.style.opacity = '1';
+                    btn.style.cursor = 'pointer';
+                } else {
+                    btn.disabled = true;
+                    btn.style.opacity = '0.5';
+                    btn.style.cursor = 'not-allowed';
+                }
+            };
+
+            window.submitCompletion = async (sid, pCode) => {
+                const btn = document.getElementById('completeBtn');
+                const resultDiv = document.getElementById('completionResult');
+                const file = document.getElementById('modalVideoInput').files[0];
+                const rating = document.getElementById('selectedRating').value;
+
+                btn.disabled = true;
+                btn.innerText = 'Uploading video...';
+
+                try {
+                    const videoLink = await uploadVideoFile(file);
+
+                    btn.innerText = 'Saving...';
+
+                    const response = await fetch('/api/complete-project', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({
+                            studentId: sid,
+                            projectCode: pCode,
+                            videoLink: videoLink,
+                            rating: rating
+                        })
+                    });
+
+                    const data = await response.json();
+                    if (!data.success) throw new Error(data.error);
+
+                    btn.innerText = 'Success!';
+                    resultDiv.style.display = 'block';
+                    resultDiv.innerHTML = '<span style="color: green; font-weight: bold;">✅ Project Marked Complete!</span>';
+
+                    setTimeout(() => {
+                        document.getElementById('completionModal').remove();
+                        openStudentDetail(document.querySelector('h2').innerText, '');
+                    }, 1500);
+
+                } catch (e) {
+                    console.error(e);
+                    btn.disabled = false;
+                    btn.innerText = 'Try Again';
+                    alert('Error: ' + e.message);
+                }
+            };
+
+            async function uploadVideoFile(file) {
+                return new Promise((resolve, reject) => {
+                    const formData = new FormData();
+                    formData.append('video', file);
+
+                    const xhr = new XMLHttpRequest();
+                    const progressContainer = document.getElementById('modalProgressContainer');
+                    const progressBar = document.getElementById('modalProgressBar');
+                    const percentText = document.getElementById('modalUploadPercent');
+
+                    progressContainer.style.display = 'block';
+
+                    xhr.upload.addEventListener('progress', (e) => {
+                        if (e.lengthComputable) {
+                            const percent = (e.loaded / e.total) * 100;
+                            progressBar.style.width = percent + '%';
+                            percentText.innerText = Math.round(percent) + '%';
+                        }
+                    });
+
+                    xhr.onreadystatechange = function () {
+                        if (xhr.readyState === 4) {
+                            if (xhr.status === 200) {
+                                try {
+                                    const resp = JSON.parse(xhr.responseText);
+                                    if (resp.success) {
+                                        resolve(resp.webViewLink);
+                                    } else {
+                                        reject(new Error(resp.error));
+                                    }
+                                } catch (e) {
+                                    reject(e);
+                                }
+                            } else {
+                                reject(new Error('Upload failed: ' + xhr.statusText));
+                            }
+                        }
+                    };
+
+                    xhr.open('POST', '/api/upload-video', true);
+                    xhr.send(formData);
+                });
+            }
         }
     </script>
 </body>
